--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <section>
+            <h3>Sign up for your Account</h3>
+            <h5>This is Photoshop's version of Lorem Ipsum velit auctor aliquet. </h5>
+
+            <section class="blank">
+                <section>
+                    <label for="email">Email <br></label>
+                    <input name="email" type="email" required />
+                    <label for="username">Username</label>
+                    <input type="text" required name="username">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" required>
+                    <label for="conpasssword">Confirm Password</label>
+                    <input type="password" name="conpassword" id="conpassword" required>
+
+                    <section class="subsection">
+                        <section class="subsection s-1">
+                            <input type="checkbox" name="checkbox" id="checkbox" />
+                            <label for="checkbox">I have read and agreed with the <span>terms and
+                                    conditions</span></label>
+                        </section>
+                        <section class="subsection s-2">
+                            <button type="submit">Sign Up</button>
+                        </section>
+                    </section>
+                </section>
+            </section>
+
+        </section>
+    </header>
+
     <menu></menu>
     <section></section>
     <section></section>
@@ -16,4 +49,5 @@
     <section></section>
     <section></section>
 </body>
+
 </html>
