--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -42,7 +45,52 @@
         </section>
     </header>
 
-    <menu></menu>
+    <menu>
+        <h3>Sign Up <span>Now</span></h3>
+        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+            auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
+            cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+            Sed non
+        </p>
+
+        <section id="menuSection">
+            <section class="boxes">
+                <section class="box1">
+                    <section class="circle">
+                        <a><i class="fa-solid fa-pencil"></i></span></a>
+                    </section>
+                </section>
+
+                <section class="box2">
+                    <h3>SignUp for Account</h3>
+                    <p>Proin gravida nibh vel velit auctor aliquet.</p>
+                </section>
+            </section>
+
+            <section id="web">
+                <section class="web1">
+                    <i class="fa-brands fa-twitter"></i>
+                    <h3> Twitter</h3>
+                </section>
+
+                <section class="web2">
+                    <section class="circle">
+                        <a href="#">or</a>
+                    </section>
+
+                </section>
+                <section class="web3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <h3> Facebook</h3>
+                </section>
+            </section>
+
+            
+        </section>
+
+
+    </menu>
+
     <section></section>
     <section></section>
     <section></section>
