--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+          integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -19,27 +19,33 @@
             <h5>This is Photoshop's version of Lorem Ipsum velit auctor aliquet. </h5>
 
             <section class="blank">
-                <section>
-                    <label for="email">Email <br></label>
-                    <input name="email" type="email" required />
-                    <label for="username">Username</label>
-                    <input type="text" required name="username">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" required>
-                    <label for="conpasssword">Confirm Password</label>
-                    <input type="password" name="conpassword" id="conpassword" required>
+                <form action="">
+                    <section>
+                        <label for="email">Email <br></label>
+                        <input name="email" type="email" required />
+                        <label for="username">Username</label>
+                        <input type="text" required name="username">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" required>
+                        <label for="conpasssword">Confirm Password</label>
+                        <input type="password" name="conpassword" id="conpassword" required>
 
-                    <section class="subsection">
-                        <section class="subsection s-1">
-                            <input type="checkbox" name="checkbox" id="checkbox" />
-                            <label for="checkbox">I have read and agreed with the <span>terms and
-                                    conditions</span></label>
-                        </section>
-                        <section class="subsection s-2">
-                            <button type="submit">Sign Up</button>
+                        <section class="subsection">
+                            <section class="subsection s-1">
+                                <input type="checkbox" name="checkbox" id="checkbox" />
+                                <label for="checkbox">
+                                    I have read and agreed with the <span>
+                                        terms and
+                                        conditions
+                                    </span>
+                                </label>
+                            </section>
+                            <section class="subsection s-2">
+                                <button type="submit">Sign Up</button>
+                            </section>
                         </section>
                     </section>
-                </section>
+                </form>
             </section>
 
         </section>
@@ -47,7 +53,8 @@
 
     <menu>
         <h3>Sign Up <span>Now</span></h3>
-        <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+        <p>
+            Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
             auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
             cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
             Sed non
