--- a/index.html
+++ b/index.html
@@ -92,9 +92,39 @@
                 </section>
             </section>
 
+            <section class="MForm">
+                <h2>By Mail</h2>
+                <form action="">
+                    <section class="Message">
+                        <section class="outer">
+                            <img src="Images/message.png" alt="">
+                        </section>
+                        <section class="inner">
+                            <input type="text">
+                        </section>
+                    </section>
 
+
+                    <section class="Key">
+                        <section class="outer">
+                            <img src="Images/key.png" alt="">
+                        </section>
+                        <section class="inner">
+                            <input type="text">
+                        </section>
+                    </section>
+
+                    <section class="Btn">
+                        <button type="submit">Submit</button>
+                    </section>
+                </form>
+                <hr>
+                <p>Already a user  please  <span>login here</span></p>
+            </section>
 
         </section>
+
+
 
     </menu>
 
