--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <form action="">
                     <section class="Message">
                         <section class="outer">
-                            <img src="Images/message.png" alt="">
+                            <img src="Images/email.png" alt="">
                         </section>
                         <section class="inner">
                             <input type="text">
@@ -119,7 +119,7 @@
                     </section>
                 </form>
                 <hr>
-                <p>Already a user  please  <span>login here</span></p>
+                <p>Already a user please <span>login here</span></p>
             </section>
 
         </section>
@@ -128,11 +128,257 @@
 
     </menu>
 
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-</body>
+    <main class="sign-up-3">
+        <section class="container-4">
+            <section>
+                <p>Good decision.</p>
+                <div>
+                    <p>Login To Your Account / Register New</p>
+                </div>
+            </section>
 
+            <section>
+                <div class="circle-2 c-1">
+                    <img src="Images/Shape.png" alt="shape">
+                </div>
+                <div class="circle-2 c-2">
+                    <img src="Images/linkedin.png" alt="linkedin">
+                </div>
+                <div class="circle-2 c-3">
+                    <img src="Images/twitter.png" alt="twitter">
+                </div>
+                <div class="circle-2 c-4">
+                </div>
+                <div class="circle-2 c-5">
+                    <img src="Images/star.png" alt="star">
+                </div>
+                <div class="circle-2 c-6">
+                    <img src="Images/linkedin.png" alt="linkedin">
+                </div>
+                <div class="circle-2 c-7">
+                    <img src="Images/Shape.png" alt="shape">
+                </div>
+                <div class="circle-2 c-8">
+                    <img src="Images/twitter2.png" alt="twitter">
+                </div>
+                <div class="circle-2 c-9">
+                    <img src="Images/twitter.png" alt="twitter">
+                </div>
+                <div class="circle-2 c-10">
+                    <img src="Images/facebook.png" alt="facebook">
+                </div>
+                <div class="circle-2 c-11">
+                    <img src="Images/start2.png" alt="star">
+                </div>
+            </section>
+
+            <section class="register-2">
+                <section>
+                    <div class="c-12">
+                        <img src="Images/enter.png" alt="nothing">
+                    </div>
+                    <p>Login To Your Account / Register New</p>
+                </section>
+
+                <section>
+                    <aside class="aside-login">
+                        <section class="social-btn sb-3">
+                            <div>
+                                <i class="fa-brands fa-twitter"></i>
+                            </div>
+                            <div>
+                                <a>
+                                    <span class="span-3">Login With</span>
+                                    Twitter
+                                </a>
+                            </div>
+                        </section>
+
+                        <section>
+                            <span class="span-4">
+                                <i class="fa-solid fa-slash"></i>
+                            </span>
+                            <img class="hr-4" src="Images/hr7.png" alt="hr">
+                        </section>
+
+                        <form>
+                            <input type="text" placeholder="Username">
+                            <input type="password" placeholder="Password">
+                        </form>
+
+                        <form action="">
+                            <section>
+                                <input type="checkbox">
+                                <label>Remember My Password</label>
+                            </section>
+                            <section>
+                                <button>Login</button>
+                            </section>
+                        </form>
+                    </aside>
+
+                    <aside class="aside-register">
+                        <hr class="vl-2 ">
+                        </hr>
+                        <p>Register</p>
+                        <form action="">
+                            <label>Email</label>
+                            <input type="Email" target="">
+                            <label>Username</label>
+                            <input type="text">
+                            <label>Password</label>
+                            <input type="password">
+                        </form>
+                        <section>
+                            <button>Register</button>
+                        </section>
+                    </aside>
+                </section>
+            </section>
+        </section>
+    </main>
+
+    <main class="sign-up-4">
+        <section>
+            <h1>Login To Your Account / Register New</h1>
+            <h4>The same above form , can you belive ?</h4>
+        </section>
+
+        <section class="register-3">
+            <aside class="aside-login aside-login-2">
+                <section class="social-btn sb-3">
+                    <div>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                    <div>
+                        <a>
+                            <span class="span-3">Login With</span>
+                            Twitter
+                        </a>
+                    </div>
+                </section>
+
+                <section>
+                    <span class="span-4">
+                        <i class="fa-solid fa-slash"></i>
+                    </span>
+                    <img class="hr-4" src="Images/hr7.png" alt="hr">
+                </section>
+
+                <form>
+                    <input type="text" placeholder="Username">
+                    <input type="password" placeholder="Password">
+                </form>
+
+                <form action="">
+                    <section>
+                        <input type="checkbox">
+                        <label>Remember My Password</label>
+                    </section>
+                    <section>
+                        <button>Login</button>
+                    </section>
+                </form>
+            </aside>
+
+            <aside class="aside-register aside-register-2">
+                <hr class="vl-2 ">
+                </hr>
+                <p>Register</p>
+                <form action="">
+                    <label>Email</label>
+                    <input type="Email" target="">
+                    <label>Username</label>
+                    <input type="text">
+                    <label>Password</label>
+                    <input type="password">
+                </form>
+                <section>
+                    <button>Register</button>
+                </section>
+            </aside>
+        </section>
+    </main>
+
+    <main class="sign-up-5">
+        <section>
+            <h1>Login to your acount</h1>
+        </section>
+
+        <section class="container-5">
+            <aside class="aside-login-3">
+                <section>
+                    <label>Username :</label>
+                    <input type="text">
+                </section>
+
+                <section>
+                    <label>Lastname :</label>
+                    <input type="text">
+                </section>
+
+                <section>
+                    <section>
+                        <input type="checkbox">
+                        <label>Remember My Password</label>
+                    </section>
+                    <section>
+                        <button>Login</button>
+                    </section>
+                </section>
+
+            </aside>
+            <aside class="aside-login-with">
+                <p>Login With</p>
+                <section>
+                    <div class="c-13">
+                        <img src="Images/facebook_blue.png" alt="facebook">
+                    </div>
+                    <div class="c-13 c-14">
+                        <img src="Images/twitter_blue.png" alt="facebook">
+                    </div>
+                    <div class="c-13 c-15">
+                        <img src="Images/google.png" alt="facebook">
+                    </div>
+                </section>
+            </aside>
+        </section>
+    </main>
+
+    <main class="sign-up-6">
+        <section class="container-6">
+            <section class="first">
+                <div class="c-13 c-17">
+                    <img src="Images/pencil2.png" alt="pencil">
+                </div>
+                <p>Sign Up Now</p>
+            </section>
+
+            <section class="second">
+                <form>
+                    <section>
+                        <input type="text" placeholder="Firstname">
+                    </section>
+                    <section>
+                        <input type="text" placeholder="Lastname">
+                    </section>
+                </form>
+                <section>
+                    <input type="Email" placeholder="Email">
+                    <input type="Password" placeholder="Password">
+                    <input type="Password" placeholder="Confirm Password">
+                </section>
+                <section>
+                    <button class="cancel-btn same-btn">Cancel</button>
+                    <button class="submit-btn same-btn">Submit</button>
+                </section>
+            </section>
+
+            <section class="third">
+                Already a user please <span>Login here</span>
+            </section>
+        </section>
+    </main>
+
+</body>
 </html>
